gen/people/v1/generator-errors.log
    Blocking waiting for file lock on build directory
    Checking google-people1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/people/v1/lib)
error[E0433]: failed to resolve: unresolved import
    --> gen/people/v1/lib/src/lib.rs:4835:39
     |
4835 |             sort_order: Option<crate::connections::params::ListSortOrder>,
     |                                       ^^^^^^^^^^^
     |                                       |
     |                                       unresolved import
     |                                       help: a similar path exists: `crate::people::connections`

error[E0433]: failed to resolve: unresolved import
    --> gen/people/v1/lib/src/lib.rs:4878:31
     |
4878 |                 value: crate::connections::params::ListSortOrder,
     |                               ^^^^^^^^^^^
     |                               |
     |                               unresolved import
     |                               help: a similar path exists: `crate::people::connections`

error[E0423]: expected value, found struct `members::MembersActions`
    --> gen/people/v1/lib/src/lib.rs:2572:13
     |
2572 |             members::MembersActions
     |             ^^^^^^^^^^^^^^^^^^^^^^^ did you mean `members::MembersActions { /* fields */ }`?

error[E0423]: expected value, found struct `connections::ConnectionsActions`
    --> gen/people/v1/lib/src/lib.rs:3803:13
     |
3803 |             connections::ConnectionsActions
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `connections::ConnectionsActions { /* fields */ }`?

warning: unreachable expression
    --> gen/people/v1/lib/src/lib.rs:1768:13
     |
1768 | /             Ok(match value {
1769 | |                 _ => {
1770 | |                     return Err(::serde::de::Error::custom(format!(
1771 | |                         "invalid enum for #name: {}",
...    |
1774 | |                 }
1775 | |             })
     | |______________^
     |
     = note: #[warn(unreachable_code)] on by default

warning: unreachable expression
    --> gen/people/v1/lib/src/lib.rs:4782:21
     |
4782 | /                     Ok(match value {
4783 | |                         _ => {
4784 | |                             return Err(::serde::de::Error::custom(format!(
4785 | |                                 "invalid enum for #name: {}",
...    |
4788 | |                         }
4789 | |                     })
     | |______________________^

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0423, E0433.
For more information about an error, try `rustc --explain E0423`.
error: Could not compile `google-people1`.

To learn more, run the command again with --verbose.
